# workflow-editor

./: .editorconfig  .gitignore  README.md  TODO.md  config.json  index.html  index.ts  package-lock.json  package.json  schema.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
.github/workflows/: deploy.yml
examples/angular/: README.md  angular.json  package-lock.json  package.json
examples/angular/src/: index.html  styles.scss  workflow-editor.ts
examples/angular/src/app/: app.html  (+2 more)
examples/django/: README.md  manage.py  requirements.txt
examples/django/workflow_editor_django/: asgi.py  settings.py  urls.py  wsgi.py
lib/angular/: README.md  ng-package.json  package-lock.json  package.json  tsconfig.lib.json
lib/angular/src/: public-api.ts  workflow-editor.component.ts
lib/go/: README.md
lib/go/src/: workflow_editor.go
lib/java/: README.md
lib/java/src/: DiagramEditor.java
lib/php/: README.md
lib/php/src/: workflow_editor.php
lib/python/: .gitignore  README.md  pyproject.toml  test.py
lib/python/src/relevanceio/workflow_editor/: __init__.py
lib/python/src/relevanceio/workflow_editor/django/: admin.py  views.py
lib/python/src/relevanceio/workflow_editor/django/templates/admin/: workflow_editor.html
lib/python/src/workflow_editor/: __init__.py
lib/react/: README.md
lib/react/src/: WorkflowEditor.tsx
lib/vue.js/: README.md
lib/vue.js/src/: workflow_editor.ts
src/: config.ts  edges.ts  editor.ts  eventbus.ts  index.css  index.html  index.ts  internals.ts  node.ts  nodes.ts  types.ts
tests/: test_e2e.py  test_jsonschema.py
(+7 files in other folders)
