[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relevance-workflow-editor"
version = "1.1.1"
description = "Headless Python SDK for @relevance/workflow-editor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
validation = ["jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/relevance-io/workflow-editor"
Repository = "https://github.com/relevance-io/workflow-editor"
Issues = "https://github.com/relevance-io/workflow-editor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/relevanceio"]

[tool.hatch.build.targets.wheel.force-include]
"../../dist/index.es.js"     = "relevanceio/workflow_editor/index.es.js"
"../../dist/index.es.js.map" = "relevanceio/workflow_editor/index.es.js.map"
"../../dist/index.css"       = "relevanceio/workflow_editor/index.css"
"../../config.json"          = "relevanceio/workflow_editor/schema.json"
"../../schema.json"          = "relevanceio/workflow_editor/config.json"
